# affn

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
affn-derive/: Cargo.toml  README.md
affn-derive/src/: center.rs  frame.rs  lib.rs
benches/: rotation.rs
doc/architecture/: kernel-unification-rfc.md
examples/: basic_cartesian.rs  conic_classification.rs  conic_independent_kinds.rs  conic_showcase.rs  oriented_conic.rs  parameterized_center.rs  serde_roundtrip.rs  spherical_roundtrip.rs
src/: algebra.rs  centers.rs  conic.rs  ellipsoid.rs  fmt_macros.rs  frames.rs  geodesy.rs  lib.rs  matrix3.rs  matrix6.rs  op_macros.rs  ops.rs  serde_utils.rs
src/cartesian/: direction.rs  direction_serde.rs  line_of_sight.rs  mod.rs  position.rs  position_serde.rs  serde.rs  vector.rs  vector_serde.rs  xyz.rs
src/conic/: elliptic.rs  errors.rs  hyperbolic.rs  internal.rs  kind.rs  mod.rs  orientation.rs  oriented.rs  parabolic.rs  periapsis.rs  semi_major_axis.rs  tests.rs  traits.rs
src/ellipsoidal/: mod.rs  position.rs  position_serde.rs
src/frames/: astro.rs  mod.rs
src/ops/: isometry.rs  isometry2.rs  mod.rs  rotation.rs  rotation2.rs  translation.rs  translation2.rs
src/planar/: mod.rs
src/spherical/: direction.rs  direction_serde.rs  mod.rs  position.rs  position_serde.rs
target copy/: .rustc_info.json
target copy/flycheck0/: stderr  stdout
tests/: serde.rs  test_astro_frame_relationships.rs  test_derive.rs  test_ellipsoidal.rs
