[package]
name = "affn"
version = "0.2.0"
edition = "2021"
authors = ["VPRamon <vallespuigramon@gmail.com>"]
description = "Affine geometry primitives: strongly-typed coordinate systems, reference frames, and centers for scientific computing."
license = "AGPL-3.0-only"
readme = "README.md"
repository = "https://github.com/Siderust/affn"
keywords = ["geometry", "coordinates", "affine", "algebra", "science"]
categories = ["science", "mathematics"]

[lib]
name = "affn"

[features]
default = []
serde = ["dep:serde", "qtty/serde", "nalgebra/serde-serialize"]

[dependencies]
affn-derive = { path = "affn-derive" }
nalgebra = "0.34.1"
qtty = "0.2.2"
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1.0"
