[workspace]

[package]
name = "affn"
version = "0.7.0"
edition = "2021"
authors = ["VPRamon <vallespuigramon@gmail.com>"]
description = "Affine geometry primitives: strongly-typed coordinate systems, reference frames, and centers for scientific computing."
license = "AGPL-3.0-only"
readme = "README.md"
repository = "https://github.com/Siderust/affn"
keywords = ["geometry", "coordinates", "affine", "algebra", "science"]
categories = ["science", "mathematics"]

[lib]
name = "affn"

[features]
default = []
serde = ["dep:serde", "qtty/serde"]
astro = ["qtty/astro"]

[dependencies]
affn-derive = { version = "0.1.5", path = "affn-derive" }
qtty = "0.7.1"
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.8.1"
serde_json = "1.0"

[[bench]]
name = "rotation"
harness = false
