[package]
name = "affn-derive"
version = "0.1.2"
edition = "2021"
authors = ["VPRamon <vallespuigramon@gmail.com>"]
description = "Derive macros for affn: ReferenceFrame and ReferenceCenter"
license = "AGPL-3.0-only"
repository = "https://github.com/Siderust/affn"
keywords = ["geometry", "coordinates", "derive", "macro"]
categories = ["science", "mathematics"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
