[package]
name = "affn-derive"
version = "0.7.1"
edition = "2021"
authors = ["VPRamon <vallespuigramon@gmail.com>"]
description = "Derive macros for affn: ReferenceFrame and ReferenceCenter"
license = "AGPL-3.0-only"
repository = "https://github.com/Siderust/affn"
keywords = ["geometry", "coordinates", "derive", "macro"]
categories = ["science", "mathematics"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.117", features = ["full", "extra-traits"] }
quote = "1.0.45"
proc-macro2 = "1.0"
